[package]
name = "hyperspace"
version = "0.1.0"
edition = "2021"
authors = ["Composable Developers"]

[[bin]]
name = "hyperspace"
path = "./bin/main.rs"

[dependencies]
primitives = { path = "primitives", package = "hyperspace-primitives" }
parachain = { path = "parachain", package = "hyperspace-parachain", optional = true }
cosmos = { path = "cosmos", package = "hyperspace-cosmos", optional = true }
#near = { path = "near", package = "hyperspace-near", optional = true }

# crates.io
anyhow = "1.0.65"
futures = "0.3.21"
async-trait = "0.1.53"
log = "0.4.17"
env_logger = "0.9.0"
hex = "0.4.3"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "fs"] }
codec = { version = "3.0.0", package = "parity-scale-codec" }
clap = { version = "3.2.22", features = ["derive"] }
toml = "0.5.9"
serde = "1.0.144"
thiserror = "1.0.31"
derive_more = { version = "0.99.17", features = ["from"] }

# ibc
ibc = { git = "https://github.com/composableFi/ibc-rs", rev = "9a959faabb8f2869e88327ea65a49f5697dcadf6", features = [] }
ibc-proto = { git = "https://github.com/composableFi/ibc-rs", rev = "9a959faabb8f2869e88327ea65a49f5697dcadf6" }
tendermint-proto = { git = "https://github.com/composableFi/tendermint-rs", rev = "5a74e0f8da4d3dab83cc04b5f1363b018cf3d9e8" }
ibc-rpc = { git = "https://github.com/ComposableFi/composable", rev = "306930b2cc573574fe7e044cc55972f3d7de4dff" }

ics11-beefy = { git = "https://github.com/ComposableFi/centauri", rev = "aa30f848e2f8a5c9b6282f0122c16c509260cdcf" }
ics13-near = { git = "https://github.com/ComposableFi/centauri", rev = "aa30f848e2f8a5c9b6282f0122c16c509260cdcf" }
light-client-common = { git = "https://github.com/ComposableFi/centauri", rev = "aa30f848e2f8a5c9b6282f0122c16c509260cdcf" }
pallet-ibc = { git = "https://github.com/ComposableFi/composable", rev = "306930b2cc573574fe7e044cc55972f3d7de4dff" }
ics10-grandpa = { git = "https://github.com/ComposableFi/centauri", rev = "aa30f848e2f8a5c9b6282f0122c16c509260cdcf" }

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
subxt = { git = "https://github.com/composableFi/subxt", rev = "37df0ee525252fa9a3e7730629ce0de4da9e68fd", optional = true }

[dev-dependencies]
derive_more = "0.99.17"
prost = "0.10"
parachain = { path = "parachain", package = "hyperspace-parachain", features = ["testing"] }

# substrate
subxt = { git = "https://github.com/composableFi/subxt", rev = "37df0ee525252fa9a3e7730629ce0de4da9e68fd" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
state-machine = { package = "sp-state-machine", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

# composable
#comosable-primitives = { package = "primitives",  git = "https://github.com/ComposableFi/composable", rev = "306930b2cc573574fe7e044cc55972f3d7de4dff" }
#common = { git = "https://github.com/ComposableFi/composable", rev = "306930b2cc573574fe7e044cc55972f3d7de4dff" }

[features]
parachain = ["dep:parachain", "subxt"]
#near = ["dep:near"]
#cosmos = ["dep:cosmos"]
testing = []

[workspace]
members = [
    "primitives",
    "parachain",
    "cosmos",
    "testsuite",
#    "near",
]


[patch.crates-io]
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-core-hashing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-debug-derive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-panic-handler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
